Update to latest SLAPI
Now for Galimulator 5.0.2!